experimental/ir/testdata/extend/import_private.proto.yaml.stderr.txt
error: cannot find `M` in this scope
  --> c.proto:6:8
   |
 6 | extend M {
   |        ^ not found in this scope
   = help: the full name of this scope is `test`

error: expected message type, found `package` declaration `test`
  --> c.proto:10:8
   |
10 | extend test.M {
   |        ^^^^^^ expected message type
  ::: b.proto:2:1
   |
 2 | package test;
   | ------------- defined here

error: cannot find `.test.M` in this scope
  --> c.proto:14:8
   |
14 | extend .test.M {
   |        ^^^^^^^ not found in this scope
   = help: the full name of this scope is `test`

encountered 3 errors
